virtualMachines/esp32/aggregator/grammar/generated-modern/VbishParser.js
// Generated from C:/dev/pulse-new-repo/virtualMachines/esp32/aggregator/grammar/Vbish.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import VbishVisitor from './VbishVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class VbishParser extends antlr4.Parser {

    static grammarFileName = "Vbish.g4";
    static literalNames = [ null, "'PULSE'", "'SERVICE'", "'DAEMON'", "'PROGRAM'", 
                            "'ON'", "'EVERY'", "'LOCAL'", "'PARENT'", "'CHILD'", 
                            "'SIBLING'", "'ALTERNATE'", "'MS'", "'S'", "'M'", 
                            "'SECOND'", "'SECONDS'", "'INTEROP'", "'PASCALISH'", 
                            "'COBOLISH'", "'VBISH'", "'WFL'", "'WORKFLOW'", 
                            "'ROLE'", "'CODE_LIBRARIAN'", "'LIBRARY'", "'USE'", 
                            "'IMPORT'", "'MAPPER'", "'ROUTE'", "'SYSTEM'", 
                            "'TYPE'", "'DATABASE'", "'OF'", "'QUEUE'", "'VISIBILITY'", 
                            "'INTERNAL'", "'EXPOSED'", "'BEGIN'", "'->'", 
                            "'USING'", "'LIBRARIAN'", "'FROM'", "'AS'", 
                            "'OPTION'", "'EXPLICIT'", "'DIM'", "'SUB'", 
                            "'FUNCTION'", "'END'", "'RETURN'", "'IF'", "'THEN'", 
                            "'ELSE'", "'FOR'", "'TO'", "'STEP'", "'NEXT'", 
                            "'WHILE'", "'PRINT'", "'DISPLAY'", "'AND'", 
                            "'OR'", "'ANDALSO'", "'ORELSE'", "'NOT'", "'STRING'", 
                            "'INTEGER'", "'DOUBLE'", "'BOOLEAN'", "'TRUE'", 
                            "'FALSE'", "'='", "'('", "')'", "','", "'&'", 
                            "'+'", "'-'", "'*'", "'/'", "'<>'", "'<'", "'>'", 
                            "'<='", "'>='" ];
    static symbolicNames = [ null, "PULSE", "SERVICE", "DAEMON", "PROGRAM", 
                             "ON", "EVERY", "LOCAL", "PARENT", "CHILD", 
                             "SIBLING", "ALTERNATE", "MS", "S", "M", "SECOND", 
                             "SECONDS", "INTEROP", "PASCALISH", "COBOLISH", 
                             "VBISH", "WFL", "WORKFLOW", "ROLE", "CODE_LIBRARIAN", 
                             "LIBRARY", "USE", "IMPORT", "MAPPER", "ROUTE", 
                             "SYSTEM", "TYPE", "DATABASE", "OF", "QUEUE", 
                             "VISIBILITY", "INTERNAL", "EXPOSED", "BEGIN_KW", 
                             "ARROW", "USING", "LIBRARIAN", "FROM", "AS", 
                             "OPTION", "EXPLICIT", "DIM", "SUB", "FUNCTION", 
                             "END", "RETURN", "IF", "THEN", "ELSE", "FOR", 
                             "TO", "STEP", "NEXT", "WHILE", "PRINT", "DISPLAY", 
                             "AND", "OR", "ANDALSO", "ORELSE", "NOT", "STRING", 
                             "INTEGER", "DOUBLE", "BOOLEAN", "TRUE", "FALSE", 
                             "ASSIGN", "LPAREN", "RPAREN", "COMMA", "AMPERSAND", 
                             "PLUS", "MINUS", "MUL", "DIV", "NE", "LT", 
                             "GT", "LTE", "GTE", "NUMBER", "STRING_LITERAL", 
                             "IDENTIFIER", "COMMENT", "WS", "EQ" ];
    static ruleNames = [ "compilationUnit", "optionExplicit", "runtimeDecl", 
                         "placement", "intervalUnit", "interopDecl", "interopKind", 
                         "topLevelDecl", "roleDecl", "roleName", "libraryDecl", 
                         "librarySource", "useDecl", "importDecl", "routeDecl", 
                         "systemDecl", "databaseDecl", "systemMember", "systemQueueDecl", 
                         "systemServiceDecl", "systemVisibilityClause", 
                         "variableDecl", "subDecl", "functionDecl", "parameterList", 
                         "parameter", "statement", "ifStatement", "forStatement", 
                         "whileStatement", "printStatement", "assignment", 
                         "callStatement", "returnStatement", "expression", 
                         "logicalOr", "logicalAnd", "equality", "relational", 
                         "additive", "multiplicative", "primary", "concatenation", 
                         "addOp", "mulOp", "relOp", "typeName", "stringOrIdentifier" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = VbishParser.ruleNames;
        this.literalNames = VbishParser.literalNames;
        this.symbolicNames = VbishParser.symbolicNames;
    }



	compilationUnit() {
	    let localctx = new CompilationUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, VbishParser.RULE_compilationUnit);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===44) {
	            this.state = 96;
	            this.optionExplicit();
	        }

	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 30) !== 0)) {
	            this.state = 99;
	            this.runtimeDecl();
	        }

	        this.state = 113;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 17)) & ~0x1f) === 0 && ((1 << (_la - 17)) & 3758143297) !== 0)) {
	            this.state = 111;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 17:
	                this.state = 102;
	                this.interopDecl();
	                break;
	            case 23:
	                this.state = 103;
	                this.roleDecl();
	                break;
	            case 25:
	                this.state = 104;
	                this.libraryDecl();
	                break;
	            case 26:
	                this.state = 105;
	                this.useDecl();
	                break;
	            case 27:
	                this.state = 106;
	                this.importDecl();
	                break;
	            case 29:
	                this.state = 107;
	                this.routeDecl();
	                break;
	            case 30:
	                this.state = 108;
	                this.systemDecl();
	                break;
	            case 32:
	                this.state = 109;
	                this.databaseDecl();
	                break;
	            case 46:
	            case 47:
	            case 48:
	                this.state = 110;
	                this.topLevelDecl();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 115;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 116;
	        this.match(VbishParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	optionExplicit() {
	    let localctx = new OptionExplicitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, VbishParser.RULE_optionExplicit);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(VbishParser.OPTION);
	        this.state = 119;
	        this.match(VbishParser.EXPLICIT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	runtimeDecl() {
	    let localctx = new RuntimeDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, VbishParser.RULE_runtimeDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 121;
	            this.match(VbishParser.PULSE);
	        }

	        this.state = 124;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 28) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 125;
	        this.stringOrIdentifier();
	        this.state = 128;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 126;
	            this.match(VbishParser.ON);
	            this.state = 127;
	            this.placement();
	        }

	        this.state = 133;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 130;
	            this.match(VbishParser.EVERY);
	            this.state = 131;
	            this.match(VbishParser.NUMBER);
	            this.state = 132;
	            this.intervalUnit();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	placement() {
	    let localctx = new PlacementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, VbishParser.RULE_placement);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 3968) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	intervalUnit() {
	    let localctx = new IntervalUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, VbishParser.RULE_intervalUnit);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 126976) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interopDecl() {
	    let localctx = new InteropDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, VbishParser.RULE_interopDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this.match(VbishParser.INTEROP);
	        this.state = 140;
	        this.interopKind();
	        this.state = 141;
	        this.match(VbishParser.STRING_LITERAL);
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 142;
	            this.match(VbishParser.AS);
	            this.state = 143;
	            this.match(VbishParser.IDENTIFIER);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interopKind() {
	    let localctx = new InteropKindContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, VbishParser.RULE_interopKind);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 8126464) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	topLevelDecl() {
	    let localctx = new TopLevelDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, VbishParser.RULE_topLevelDecl);
	    try {
	        this.state = 151;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 46:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 148;
	            this.variableDecl();
	            break;
	        case 47:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 149;
	            this.subDecl();
	            break;
	        case 48:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 150;
	            this.functionDecl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	roleDecl() {
	    let localctx = new RoleDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, VbishParser.RULE_roleDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this.match(VbishParser.ROLE);
	        this.state = 154;
	        this.roleName();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	roleName() {
	    let localctx = new RoleNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, VbishParser.RULE_roleName);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        _la = this._input.LA(1);
	        if(!(_la===24 || _la===88)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	libraryDecl() {
	    let localctx = new LibraryDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, VbishParser.RULE_libraryDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.match(VbishParser.LIBRARY);
	        this.state = 159;
	        this.stringOrIdentifier();
	        this.state = 162;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===42) {
	            this.state = 160;
	            this.match(VbishParser.FROM);
	            this.state = 161;
	            this.librarySource();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	librarySource() {
	    let localctx = new LibrarySourceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, VbishParser.RULE_librarySource);
	    try {
	        this.state = 167;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 41:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 164;
	            this.match(VbishParser.LIBRARIAN);
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 165;
	            this.match(VbishParser.MAPPER);
	            break;
	        case 87:
	        case 88:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 166;
	            this.stringOrIdentifier();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	useDecl() {
	    let localctx = new UseDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, VbishParser.RULE_useDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 169;
	        this.match(VbishParser.USE);
	        this.state = 170;
	        this.stringOrIdentifier();
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 171;
	            this.match(VbishParser.AS);
	            this.state = 172;
	            this.match(VbishParser.IDENTIFIER);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importDecl() {
	    let localctx = new ImportDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, VbishParser.RULE_importDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.match(VbishParser.IMPORT);
	        this.state = 176;
	        this.match(VbishParser.MAPPER);
	        this.state = 177;
	        this.stringOrIdentifier();
	        this.state = 178;
	        this.match(VbishParser.FROM);
	        this.state = 179;
	        this.librarySource();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	routeDecl() {
	    let localctx = new RouteDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, VbishParser.RULE_routeDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(VbishParser.ROUTE);
	        this.state = 182;
	        this.stringOrIdentifier();
	        this.state = 183;
	        this.match(VbishParser.TO);
	        this.state = 184;
	        this.stringOrIdentifier();
	        this.state = 185;
	        this.match(VbishParser.USING);
	        this.state = 186;
	        this.match(VbishParser.MAPPER);
	        this.state = 187;
	        this.stringOrIdentifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	systemDecl() {
	    let localctx = new SystemDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, VbishParser.RULE_systemDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.match(VbishParser.SYSTEM);
	        this.state = 198;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 31:
	            this.state = 190;
	            this.match(VbishParser.TYPE);
	            this.state = 191;
	            this.stringOrIdentifier();
	            break;
	        case 87:
	        case 88:
	            this.state = 192;
	            this.stringOrIdentifier();
	            this.state = 196;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===33) {
	                this.state = 193;
	                this.match(VbishParser.OF);
	                this.state = 194;
	                this.match(VbishParser.TYPE);
	                this.state = 195;
	                this.stringOrIdentifier();
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 201;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 200;
	            this.systemVisibilityClause();
	        }

	        this.state = 203;
	        this.match(VbishParser.BEGIN_KW);
	        this.state = 207;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2 || _la===30 || _la===34) {
	            this.state = 204;
	            this.systemMember();
	            this.state = 209;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 210;
	        this.match(VbishParser.END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	databaseDecl() {
	    let localctx = new DatabaseDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, VbishParser.RULE_databaseDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 212;
	        this.match(VbishParser.DATABASE);
	        this.state = 213;
	        this.stringOrIdentifier();
	        this.state = 214;
	        this.match(VbishParser.TYPE);
	        this.state = 215;
	        this.typeName();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	systemMember() {
	    let localctx = new SystemMemberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, VbishParser.RULE_systemMember);
	    try {
	        this.state = 220;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 34:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 217;
	            this.systemQueueDecl();
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 218;
	            this.systemServiceDecl();
	            break;
	        case 30:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 219;
	            this.systemDecl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	systemQueueDecl() {
	    let localctx = new SystemQueueDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, VbishParser.RULE_systemQueueDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 222;
	        this.match(VbishParser.QUEUE);
	        this.state = 223;
	        this.stringOrIdentifier();
	        this.state = 226;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===39) {
	            this.state = 224;
	            this.match(VbishParser.ARROW);
	            this.state = 225;
	            this.stringOrIdentifier();
	        }

	        this.state = 228;
	        this.match(VbishParser.TYPE);
	        this.state = 229;
	        this.stringOrIdentifier();
	        this.state = 231;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 230;
	            this.systemVisibilityClause();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	systemServiceDecl() {
	    let localctx = new SystemServiceDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, VbishParser.RULE_systemServiceDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 233;
	        this.match(VbishParser.SERVICE);
	        this.state = 234;
	        this.stringOrIdentifier();
	        this.state = 237;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===39) {
	            this.state = 235;
	            this.match(VbishParser.ARROW);
	            this.state = 236;
	            this.stringOrIdentifier();
	        }

	        this.state = 240;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 239;
	            this.systemVisibilityClause();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


